@@ -14,6 +14,12 @@
 #include<QColor>
 
 #include <vector>
+#include <fcntl.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <sys/select.h>
+#include <unistd.h>
+#include <sys/ioctl.h>
 
 #define MARGINS 4
 
@@ -28,7 +34,7 @@ class DataClass;
 #include "FilesClass.h"
 #include "OrphanDialogClass.h"
 
-enum {ABOUT=0,ABOUTQT,QUERY,INFO,WARN,FATAL,GETINPUT,GETITEM,GETFORM,GETLIST,SHOWTEXTFILE,SHOWIMAGEFILE,GETCOLOUR,GETFONT,GETTEXT};
+enum {ABOUT=0,ABOUTQT,QUERY,INFO,WARN,FATAL,GETINPUT,GETITEM,GETFORM,GETLIST,SHOWTEXTFILE,SHOWIMAGEFILE,GETCOLOUR,GETFONT,GETTEXT,TAILBOX};
 
 
 #endif
