@@ -1,4 +1,5 @@
 0.1.1
+Added type tailbox.
 Code clean.
 Standardised outputs.
 
